# identify_customer_segments

./: Identify_Customer_Segments.html  Identify_Customer_Segments.ipynb  pyproject.toml
